Fix bugs in group fairness scores and recommended nodes; create notebook for umap computation

--- a/preprocessing/NodePreprocessing_2.ipynb
+++ b/preprocessing/NodePreprocessing_2.ipynb
@@ -165,15 +165,22 @@
       "\n",
       "Node2Vec\n",
       "\n",
-      "HOPE\n",
-      "\n",
-      "HGCN\n",
-      "\n",
-      "LaplacianEigenmap\n",
-      "\n",
-      "SDNE\n",
-      "\n",
-      "SVD\n"
+      "HOPE\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/brunoscarone/Documents/PhD - Northeastern/Academics/Courses/Spring 22/CS7250 - InfViz/Final Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_2.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_2.ipynb#ch0000007?line=62'>63</a>\u001b[0m \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m,\u001b[39m5\u001b[39m): \u001b[39m# define max value for k\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_2.ipynb#ch0000007?line=63'>64</a>\u001b[0m     \u001b[39m# compute group fairness score\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_2.ipynb#ch0000007?line=64'>65</a>\u001b[0m     \u001b[39mif\u001b[39;00m node_idx \u001b[39min\u001b[39;00m dict_node_attr_val\u001b[39m.\u001b[39mkeys()  :\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_2.ipynb#ch0000007?line=65'>66</a>\u001b[0m         score \u001b[39m=\u001b[39m group_unfairness_score(G, embedding, W, node_idx, node_features, attr_pos, value, k)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_2.ipynb#ch0000007?line=66'>67</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_2.ipynb#ch0000007?line=67'>68</a>\u001b[0m         score \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "File \u001b[0;32m~/Documents/PhD - Northeastern/Academics/Courses/Spring 22/CS7250 - InfViz/Final Project/Github_repos/BiaScope/preprocessing/../utilities.py:112\u001b[0m, in \u001b[0;36mgroup_unfairness_score\u001b[0;34m(G, Y, W, node_idx, node_features, S, z, k)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=100'>101</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mgroup_unfairness_score\u001b[39m(G, Y, W, node_idx, node_features, S, z, k):\n\u001b[1;32m    <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=101'>102</a>\u001b[0m     \u001b[39m'''\u001b[39;00m\n\u001b[1;32m    <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=102'>103</a>\u001b[0m \u001b[39m        Calculates the group unfairness score for node 'node_idx' where Y is the nxd embedding matrix, W\u001b[39;00m\n\u001b[1;32m    <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=103'>104</a>\u001b[0m \u001b[39m        is the weighted adjacency matrix, S is a sensitive attribute and z an attribute value for S. \u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=109'>110</a>\u001b[0m \u001b[39m            - rho_z(u) = {v : v in rho(u) and attr(v,S)=z}\u001b[39;00m\n\u001b[1;32m    <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=110'>111</a>\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m--> <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=111'>112</a>\u001b[0m     rho_u_idx \u001b[39m=\u001b[39m recommended_nodes(Y,W,node_idx,k)\n\u001b[1;32m    <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=113'>114</a>\u001b[0m     \u001b[39m# get the number of values of attribute S\u001b[39;00m\n\u001b[1;32m    <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=114'>115</a>\u001b[0m     nr_Svalues \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(np\u001b[39m.\u001b[39munique(node_features[:,S]))\n",
+      "File \u001b[0;32m~/Documents/PhD - Northeastern/Academics/Courses/Spring 22/CS7250 - InfViz/Final Project/Github_repos/BiaScope/preprocessing/../utilities.py:93\u001b[0m, in \u001b[0;36mrecommended_nodes\u001b[0;34m(Y, W, node_idx, k)\u001b[0m\n\u001b[1;32m     <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=90'>91</a>\u001b[0m \u001b[39m# compute top_k(<Y[u],Y[v]>)\u001b[39;00m\n\u001b[1;32m     <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=91'>92</a>\u001b[0m n \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(W)\n\u001b[0;32m---> <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=92'>93</a>\u001b[0m similarities \u001b[39m=\u001b[39m [(v,np\u001b[39m.\u001b[39mdot(Y[node_idx],Y[v])) \u001b[39mfor\u001b[39;00m v \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n) \u001b[39mif\u001b[39;00m (v \u001b[39m!=\u001b[39m node_idx) \u001b[39mand\u001b[39;00m (\u001b[39mnot\u001b[39;00m W[node_idx,v])]\n\u001b[1;32m     <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=93'>94</a>\u001b[0m similarities\u001b[39m.\u001b[39msort(key \u001b[39m=\u001b[39m \u001b[39mlambda\u001b[39;00m x : x[\u001b[39m1\u001b[39m],reverse\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m     <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=94'>95</a>\u001b[0m top_k \u001b[39m=\u001b[39m similarities[\u001b[39m0\u001b[39m:k]\n",
+      "File \u001b[0;32m~/Documents/PhD - Northeastern/Academics/Courses/Spring 22/CS7250 - InfViz/Final Project/Github_repos/BiaScope/preprocessing/../utilities.py:93\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=90'>91</a>\u001b[0m \u001b[39m# compute top_k(<Y[u],Y[v]>)\u001b[39;00m\n\u001b[1;32m     <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=91'>92</a>\u001b[0m n \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(W)\n\u001b[0;32m---> <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=92'>93</a>\u001b[0m similarities \u001b[39m=\u001b[39m [(v,np\u001b[39m.\u001b[39;49mdot(Y[node_idx],Y[v])) \u001b[39mfor\u001b[39;00m v \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n) \u001b[39mif\u001b[39;00m (v \u001b[39m!=\u001b[39m node_idx) \u001b[39mand\u001b[39;00m (\u001b[39mnot\u001b[39;00m W[node_idx,v])]\n\u001b[1;32m     <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=93'>94</a>\u001b[0m similarities\u001b[39m.\u001b[39msort(key \u001b[39m=\u001b[39m \u001b[39mlambda\u001b[39;00m x : x[\u001b[39m1\u001b[39m],reverse\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m     <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=94'>95</a>\u001b[0m top_k \u001b[39m=\u001b[39m similarities[\u001b[39m0\u001b[39m:k]\n",
+      "File \u001b[0;32m<__array_function__ internals>:5\u001b[0m, in \u001b[0;36mdot\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -224,11 +231,16 @@
     "        #     node_features[nodes[i]][\"InFoRM\"] = inFoRM_scores[i]\n",
     "\n",
     "        # create a dict nodeId->sensitive_attrs_val\n",
+    "        # dict node_id -> row in W\n",
+    "        dict_node_id2idx = {}\n",
+    "        for i,v in enumerate(G.nodes()):\n",
+    "            dict_node_id2idx[v] = i\n",
     "\n",
     "        with open(output_file_gf, \"w\") as outputCSV:\n",
-    "            outputCSV.write(\"id,attribute,value,k,group_fairness_score\\n\")\n",
+    "            outputCSV.write(\"id,attribute,value,k,group_fairness_score_smaller_ks\\n\")\n",
     "\n",
-    "            for node_id in range(len(W)): # node ids start from 0\n",
+    "            for node_id in G.nodes(): # node ids start from 0\n",
+    "                node_idx = dict_node_id2idx[node_id]\n",
     "                for attribute in sensitive_attrs:\n",
     "                    dict_node_attr_val = dict([(node_features[i,0],node_features[i,1]) for i in range(len(node_features))])\n",
     "                    # get values from the selected attribute\n",
@@ -237,8 +249,8 @@
     "                    for value in sensitive_attrs_vals:\n",
     "                        for k in range(1,5): # define max value for k\n",
     "                            # compute group fairness score\n",
-    "                            if node_id in dict_node_attr_val.keys()  :\n",
-    "                                score = group_unfairness_score(embedding, W, node_id, node_features, attr_pos, value, k)\n",
+    "                            if node_idx in dict_node_attr_val.keys()  :\n",
+    "                                score = group_unfairness_score(G, embedding, W, node_idx, node_features, attr_pos, value, k)\n",
     "                            else:\n",
     "                                score = \"\"\n",
     "                            \n",
