--- a/preprocessing/NodePreprocessing_4.ipynb
+++ b/preprocessing/NodePreprocessing_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -210,19 +210,10 @@
     "        node_features = np.loadtxt(open(node_features_file, \"rb\"), delimiter=\",\", skiprows=1).astype(int)\n",
     "\n",
     "        # select output file\n",
-    "        output_file_gf = \"../embeddings/{}/{}/{}_{}_64_embedding_group_fairness_scores_larger_ks.csv\".format(graph_name, \n",
+    "        output_file_gf = \"../embeddings/{}/{}/{}_{}_64_embedding_group_fairness_scores.csv\".format(graph_name, \n",
     "                                                                                         embedding_alg, \n",
     "                                                                                         graph_name, \n",
     "                                                                                         embedding_alg)\n",
-    "\n",
-    "        # hay 4038 nodos en el embedding y 4035 tienen genero\n",
-    "        # group_fairness_scores = group_unfairness_scores(Y, W, node_features, S, z, k)\n",
-    "        # cambio el orden del for para poder calcular todas las scores\n",
-    "        # si resolvemos los nodos faltantes se puede reajustar\n",
-    "\n",
-    "        # nodes = list(G.nodes())\n",
-    "        # for i in range(len(inFoRM_scores)):\n",
-    "        #     node_features[nodes[i]][\"InFoRM\"] = inFoRM_scores[i]\n",
     "\n",
     "        # create a dict nodeId->sensitive_attrs_val\n",
     "\n",
@@ -236,7 +227,7 @@
     "                    attr_pos = sensitive_attrs.index(attribute) + 1\n",
     "                    sensitive_attrs_vals = np.unique(node_features[:,attr_pos])\n",
     "                    for value in sensitive_attrs_vals:\n",
-    "                        for k in [5,10,20,25]: # define possible values for k\n",
+    "                        for k in range(5,30,5): # define possible values for k\n",
     "                            # compute group fairness score\n",
     "                            if node_id in dict_node_attr_val.keys()  :\n",
     "                                score = group_unfairness_score(embedding, W, node_id, node_features, attr_pos, value, k)\n",
@@ -270,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
