--- a/preprocessing/NodePreprocessing_5.ipynb
+++ b/preprocessing/NodePreprocessing_5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -164,19 +164,17 @@
       "\n",
       "Facebook\n",
       "\n",
-      "Node2Vec\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/brunoscarone/Documents/PhD - Northeastern/Academics/Courses/Spring 22/CS7250 - InfViz/Final Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_5.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_5.ipynb#ch0000007?line=31'>32</a>\u001b[0m \u001b[39mfor\u001b[39;00m node_id \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(W)): \u001b[39m# node ids start from 0\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_5.ipynb#ch0000007?line=32'>33</a>\u001b[0m     \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m [\u001b[39m5\u001b[39m,\u001b[39m10\u001b[39m,\u001b[39m20\u001b[39m,\u001b[39m25\u001b[39m]: \u001b[39m# define possible values for k\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_5.ipynb#ch0000007?line=33'>34</a>\u001b[0m         \u001b[39m# compute recommended nodes\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_5.ipynb#ch0000007?line=34'>35</a>\u001b[0m         rho_u \u001b[39m=\u001b[39m recommended_nodes(embedding,W,node_id,k)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_5.ipynb#ch0000007?line=35'>36</a>\u001b[0m         \u001b[39m# write data to csv file\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_5.ipynb#ch0000007?line=36'>37</a>\u001b[0m         outputCSV\u001b[39m.\u001b[39mwrite(\u001b[39m\"\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m,\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m,\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m,\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(node_id,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_5.ipynb#ch0000007?line=37'>38</a>\u001b[0m                                 k,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/NodePreprocessing_5.ipynb#ch0000007?line=38'>39</a>\u001b[0m                                 rho_u))\n",
-      "File \u001b[0;32m~/Documents/PhD - Northeastern/Academics/Courses/Spring 22/CS7250 - InfViz/Final Project/Github_repos/BiaScope/preprocessing/../utilities.py:82\u001b[0m, in \u001b[0;36mrecommended_nodes\u001b[0;34m(Y, W, node_idx, k)\u001b[0m\n\u001b[1;32m     <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=79'>80</a>\u001b[0m n \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(W)\n\u001b[1;32m     <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=80'>81</a>\u001b[0m similarities \u001b[39m=\u001b[39m [(v,np\u001b[39m.\u001b[39mdot(Y[node_idx],Y[v])) \u001b[39mfor\u001b[39;00m v \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n) \u001b[39mif\u001b[39;00m (v \u001b[39m!=\u001b[39m node_idx) \u001b[39mand\u001b[39;00m (\u001b[39mnot\u001b[39;00m W[node_idx,v])]\n\u001b[0;32m---> <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=81'>82</a>\u001b[0m similarities\u001b[39m.\u001b[39;49msort(key \u001b[39m=\u001b[39;49m \u001b[39mlambda\u001b[39;49;00m x : x[\u001b[39m1\u001b[39;49m],reverse\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m     <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=82'>83</a>\u001b[0m top_k \u001b[39m=\u001b[39m similarities[\u001b[39m0\u001b[39m:k]\n\u001b[1;32m     <a href='file:///Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repos/BiaScope/preprocessing/../utilities.py?line=84'>85</a>\u001b[0m rho_u \u001b[39m=\u001b[39m [v \u001b[39mfor\u001b[39;00m (v,_) \u001b[39min\u001b[39;00m top_k]\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Node2Vec\n",
+      "\n",
+      "HOPE\n",
+      "\n",
+      "HGCN\n",
+      "\n",
+      "LaplacianEigenmap\n",
+      "\n",
+      "SDNE\n",
+      "\n",
+      "SVD\n"
      ]
     }
    ],
@@ -208,18 +206,30 @@
     "\n",
     "        # create a dict nodeId->sensitive_attrs_val\n",
     "        # recommended_nodes(Y,W,node_idx,k)\n",
+    "        # dict node_id -> row in W\n",
+    "        dict_node_id2idx = {}\n",
+    "        dict_node_idx2id = {}\n",
+    "        for i,v in enumerate(G.nodes()):\n",
+    "            dict_node_id2idx[v] = i\n",
+    "            dict_node_idx2id[i] = v\n",
     "\n",
     "        with open(output_file_gf, \"w\") as outputCSV:\n",
     "            outputCSV.write(\"id,k,recommended_nodes\\n\")\n",
     "\n",
-    "            for node_id in range(len(W)): # node ids start from 0\n",
+    "            for node_id in G.nodes():\n",
+    "                node_idx = dict_node_id2idx[node_id]\n",
+    "\n",
     "                for k in [25]: # define possible values for k\n",
     "                    # compute recommended nodes\n",
-    "                    rho_u = recommended_nodes(embedding,W,node_id,k)\n",
+    "                    rho_u_idx = recommended_nodes(embedding,W,node_idx,k)\n",
     "                    # write data to csv file\n",
-    "                    outputCSV.write(\"{},{},{},\\n\".format(node_id,\n",
+    "                    rho_u_id = []\n",
+    "                    for recnode_idx in rho_u_idx:\n",
+    "                        rho_u_id.append(dict_node_idx2id[recnode_idx])\n",
+    "\n",
+    "                    outputCSV.write(\"{},{},{}\\n\".format(node_id,\n",
     "                                            k,\n",
-    "                                            rho_u))"
+    "                                            rho_u_id))"
    ]
   }
  ],
