Add umap CSV files; modify gitignore to track CSVs

--- a/preprocessing/NodePreprocessing_6.ipynb
+++ b/preprocessing/NodePreprocessing_6.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -127,22 +127,127 @@
      "text": [
       "\n",
       "\n",
-      "ca-HepTh\n",
-      "Spring Layout Elapsed Time: 208\n",
+      "Facebook\n",
+      "Spring Layout Elapsed Time: 41\n",
       "\n",
       "Node2Vec\n",
-      "PCA Elapsed Time: 0\n"
+      "UMAP Elapsed Time: 15\n",
+      "\n",
+      "HOPE\n",
+      "UMAP Elapsed Time: 12\n",
+      "\n",
+      "HGCN\n",
+      "UMAP Elapsed Time: 15\n",
+      "\n",
+      "LaplacianEigenmap\n",
+      "UMAP Elapsed Time: 18\n",
+      "\n",
+      "SDNE\n",
+      "UMAP Elapsed Time: 15\n",
+      "\n",
+      "SVD\n",
+      "UMAP Elapsed Time: 14\n",
+      "\n",
+      "\n",
+      "LastFM\n",
+      "Spring Layout Elapsed Time: 144\n",
+      "\n",
+      "Node2Vec\n",
+      "UMAP Elapsed Time: 21\n",
+      "\n",
+      "HOPE\n",
+      "UMAP Elapsed Time: 11\n",
+      "\n",
+      "HGCN\n",
+      "UMAP Elapsed Time: 13\n",
+      "\n",
+      "LaplacianEigenmap\n",
+      "UMAP Elapsed Time: 17\n",
+      "\n",
+      "SDNE\n",
+      "UMAP Elapsed Time: 28\n",
+      "\n",
+      "SVD\n",
+      "UMAP Elapsed Time: 14\n",
+      "\n",
+      "\n",
+      "wikipedia\n",
+      "Spring Layout Elapsed Time: 77\n",
+      "\n",
+      "Node2Vec\n",
+      "UMAP Elapsed Time: 10\n",
+      "\n",
+      "HOPE\n",
+      "UMAP Elapsed Time: 9\n",
+      "\n",
+      "HGCN\n",
+      "UMAP Elapsed Time: 10\n",
+      "\n",
+      "LaplacianEigenmap\n",
+      "UMAP Elapsed Time: 10\n",
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "index 24325 is out of bounds for axis 0 with size 9877",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/brunoscarone/Documents/PhD - Northeastern/Academics/Courses/Spring 22/CS7250 - InfViz/Final Project/Github_repo/InfoViz-Final/preprocessing/NodePreprocessing.ipynb Cell 7'\u001b[0m in \u001b[0;36m<cell line: 16>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repo/InfoViz-Final/preprocessing/NodePreprocessing.ipynb#ch0000006?line=48'>49</a>\u001b[0m inFoRM_hops_score \u001b[39m=\u001b[39m utilities\u001b[39m.\u001b[39mk_hop_InFoRM_scores_normalized(embeddings, G, nr_hops)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repo/InfoViz-Final/preprocessing/NodePreprocessing.ipynb#ch0000006?line=50'>51</a>\u001b[0m \u001b[39mfor\u001b[39;00m node_id \u001b[39min\u001b[39;00m node_features:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repo/InfoViz-Final/preprocessing/NodePreprocessing.ipynb#ch0000006?line=51'>52</a>\u001b[0m     \u001b[39mif\u001b[39;00m nr_hops \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m \u001b[39mand\u001b[39;00m \u001b[39mround\u001b[39m(inFoRM_hops_score[\u001b[39mint\u001b[39;49m(node_id)],\u001b[39m8\u001b[39m) \u001b[39m!=\u001b[39m \u001b[39mround\u001b[39m(inFoRM_1_score[\u001b[39mint\u001b[39m(node_id)],\u001b[39m8\u001b[39m):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repo/InfoViz-Final/preprocessing/NodePreprocessing.ipynb#ch0000006?line=52'>53</a>\u001b[0m         \u001b[39m# check consistency with previous function for nr_hops = 1\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repo/InfoViz-Final/preprocessing/NodePreprocessing.ipynb#ch0000006?line=53'>54</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mnode_id\u001b[39m\u001b[39m'\u001b[39m,node_id)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/brunoscarone/Documents/PhD%20-%20Northeastern/Academics/Courses/Spring%2022/CS7250%20-%20InfViz/Final%20Project/Github_repo/InfoViz-Final/preprocessing/NodePreprocessing.ipynb#ch0000006?line=54'>55</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39minFoRM_hops_score[int(node_id)]\u001b[39m\u001b[39m'\u001b[39m,inFoRM_hops_score[\u001b[39mint\u001b[39m(node_id)])\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 24325 is out of bounds for axis 0 with size 9877"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3369, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/var/folders/_q/pzhhxkj13gz7sj97r2t7qqgw0000gn/T/ipykernel_62480/2160804844.py\", line 49, in <cell line: 16>\n",
+      "    inFoRM_hops_score = utilities.k_hop_InFoRM_scores_normalized(embeddings, G, nr_hops)\n",
+      "  File \"/Users/brunoscarone/Documents/PhD - Northeastern/Academics/Courses/Spring 22/CS7250 - InfViz/Final Project/Github_repos/BiaScope/preprocessing/../utilities.py\", line 65, in k_hop_InFoRM_scores_normalized\n",
+      "    # check that embedding matrix is sorted according to node indices\n",
+      "  File \"/Users/brunoscarone/Documents/PhD - Northeastern/Academics/Courses/Spring 22/CS7250 - InfViz/Final Project/Github_repos/BiaScope/preprocessing/../utilities.py\", line 65, in <listcomp>\n",
+      "    # check that embedding matrix is sorted according to node indices\n",
+      "  File \"/Users/brunoscarone/Documents/PhD - Northeastern/Academics/Courses/Spring 22/CS7250 - InfViz/Final Project/Github_repos/BiaScope/preprocessing/../utilities.py\", line 50, in k_hop_InFoRM_score\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/networkx/generators/ego.py\", line 61, in ego_graph\n",
+      "    H = G.subgraph(sp).copy()\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/networkx/classes/graph.py\", line 1544, in copy\n",
+      "    G.add_edges_from(\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/networkx/classes/graph.py\", line 933, in add_edges_from\n",
+      "    for e in ebunch_to_add:\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/networkx/classes/graph.py\", line 1547, in <genexpr>\n",
+      "    for v, datadict in nbrs.items()\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/_collections_abc.py\", line 743, in __iter__\n",
+      "    for key in self._mapping:\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/networkx/classes/coreviews.py\", line 282, in <genexpr>\n",
+      "    return (n for n in self._atlas if self.NODE_OK(n))\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/networkx/classes/coreviews.py\", line 336, in new_node_ok\n",
+      "    def new_node_ok(nbr):\n",
+      "KeyboardInterrupt\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 1982, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1118, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1012, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 865, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 818, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(r))\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 736, in format_record\n",
+      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/stack_data/core.py\", line 698, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/stack_data/core.py\", line 649, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/stack_data/core.py\", line 628, in executing_piece\n",
+      "    return only(\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/executing/executing.py\", line 164, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
      ]
     }
    ],
