--- a/preprocessing/NodePreprocessing_4.ipynb
+++ b/preprocessing/NodePreprocessing_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -169,12 +169,53 @@
       "HOPE\n",
       "\n",
       "HGCN\n",
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3369, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/var/folders/_q/pzhhxkj13gz7sj97r2t7qqgw0000gn/T/ipykernel_58030/2982597030.py\", line 52, in <cell line: 3>\n",
+      "    score = group_unfairness_score(embedding, W, node_id, node_features, attr_pos, value, k)\n",
+      "  File \"/Users/brunoscarone/Documents/PhD - Northeastern/Academics/Courses/Spring 22/CS7250 - InfViz/Final Project/Github_repos/BiaScope/preprocessing/../utilities.py\", line 100, in group_unfairness_score\n",
+      "  File \"/Users/brunoscarone/Documents/PhD - Northeastern/Academics/Courses/Spring 22/CS7250 - InfViz/Final Project/Github_repos/BiaScope/preprocessing/../utilities.py\", line 82, in recommended_nodes\n",
+      "    # group unfairness score\n",
+      "KeyboardInterrupt\n",
       "\n",
-      "LaplacianEigenmap\n",
+      "During handling of the above exception, another exception occurred:\n",
       "\n",
-      "SDNE\n",
-      "\n",
-      "SVD\n"
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 1982, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1118, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1012, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 865, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 818, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(r))\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 736, in format_record\n",
+      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/stack_data/core.py\", line 698, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/stack_data/core.py\", line 649, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/stack_data/core.py\", line 628, in executing_piece\n",
+      "    return only(\n",
+      "  File \"/Users/brunoscarone/opt/anaconda3/lib/python3.8/site-packages/executing/executing.py\", line 164, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
      ]
     }
    ],
