Fix node id <-> node idx inconsistency in group fairness notebook;recompute scores

--- a/preprocessing/NodePreprocessing_4.ipynb
+++ b/preprocessing/NodePreprocessing_4.ipynb
@@ -257,11 +257,18 @@
     "                                                                                         embedding_alg)\n",
     "\n",
     "        # create a dict nodeId->sensitive_attrs_val\n",
+    "        # dict node_id -> row in W (node idx)\n",
+    "        dict_node_id2idx = {}\n",
+    "        dict_node_idx2id = {}\n",
+    "        for i,v in enumerate(G.nodes()):\n",
+    "            dict_node_id2idx[v] = i\n",
+    "            dict_node_idx2id[i] = v\n",
     "\n",
     "        with open(output_file_gf, \"w\") as outputCSV:\n",
     "            outputCSV.write(\"id,attribute,value,k,group_fairness_score\\n\")\n",
     "\n",
-    "            for node_id in range(len(W)): # node ids start from 0\n",
+    "            for node_id in G.nodes(): # node ids start from 0\n",
+    "                node_idx = dict_node_id2idx[node_id]\n",
     "                for attribute in sensitive_attrs:\n",
     "                    dict_node_attr_val = dict([(node_features[i,0],node_features[i,1]) for i in range(len(node_features))])\n",
     "                    # get values from the selected attribute\n",
@@ -270,8 +277,8 @@
     "                    for value in sensitive_attrs_vals:\n",
     "                        for k in range(5,30,5): # define possible values for k\n",
     "                            # compute group fairness score\n",
-    "                            if node_id in dict_node_attr_val.keys()  :\n",
-    "                                score = group_unfairness_score(embedding, W, node_id, node_features, attr_pos, value, k)\n",
+    "                            if node_id in dict_node_attr_val.keys():\n",
+    "                                score = group_unfairness_score(embedding, W, node_idx, node_features, attr_pos, value, k)\n",
     "                            else:\n",
     "                                score = \"\"\n",
     "                            \n",
